my second project

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <h1>Sanjana</h1>
     <h1>Sanjana</h1>
     <h1>Sanjana</h1>
+    <h1>Sham</h1>
+    <h1>Sham</h1>
+    <h1>Sham</h1>
+    <h1>Sham</h1>
+    <h1>Sham</h1>
 </body>
 </html>
